	  unsupported attributes which should normally be
	  ignored by a compliant IPP device.
	- The scheduler did not copy the complete list of
	  supported file types into the
	  document-format-supported attribute. This caused
	  clients to not send the local file type (such as
	  application/vnd.cups-raw for raw print files) and the
	  corresponding bad output in some cases.


CHANGES IN CUPS V1.1.8

	- Updated configure script to check for /etc/pam.d and
	  to only set PAMDIR if it exists.
	- Updated spec file to generate separate cups-pstoraster
	  package for pstoraster.
	- The spec file wasn't setting LOGDIR in the install.
	- The scheduler might restart a stopped printer after
	  stopping a print job. Thanks to Florent
	  Guiliani for finding this bug!
	- The init script showed run level 0 for the Red Hat
	  chkconfig program.  This is incorrect because Red Hat
	  doesn't use run level 0 for shutdown scripts.
	- The IPP backend did not handle the
	  client-error-not-found error when checking the status
	  of the job that was sent.  This caused remote queues
	  to stop on client machines when the server had job
	  history disabled.
	- Added httpConnectEncrypt() function to avoid
	  performance penalty for setting up encrypted
	  connections initially.
	- Use httpConnectEncrypt() in all client apps and in the
	  CUPS API to ensure consistent usage of encryption
	  throughout.
	- Jobs weren't queued to remote classes (fix from
	  Richard Begg.)
	- AIX changes from Richard Begg.
	- Fixed the pstops fix for GNOME output - no longer use
	  the page numbers in the %%Page: comment since GNOME
	  puts a filename instead (!?@!#?!).  There is still an
	  issue with N-up printing since GNOME defines its fonts
	  in the first page instead of the document setup section
	  (pages must be independent according to the DSC spec)
	  People with GNOME printing problems should consult bug
	  #54489...
	- The imagetops filter produced PAGE: messages when